Fix docker-compose file

--- a/go_app/Dockerfile
+++ b/go_app/Dockerfile
@@ -1,11 +1,13 @@
 FROM golang:1.9.3
 MAINTAINER A3SEC
 
-COPY rest.go /rest_app/rest.go
+RUN mkdir /rest_app
+
+COPY rest.go /rest_app
 
 EXPOSE 8081
 
-WORKDIR /rest_app/
+WORKDIR /rest_app
 
 RUN go build rest.go
 
