--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,11 +1,17 @@
 server {
-    # Set the port to listen on and the server name
-    listen 8000 default_server;
+    listen 80;
+    server_name localhost;
+
+    client_max_body_size 20m;
+    client_header_timeout 1200;
+    client_body_timeout 1200;
+    send_timeout 1200;
+    keepalive_timeout 1200;
 
     location / {
-        proxy_set_header  Host $http_host;  # django uses this by default
-        proxy_set_header X-Forwarded-Host $server_name; # also in django settings (could disable)
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-Host $server_name;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_pass http://api:8000;
+        proxy_pass http://rest:8081;
     }
 }
