--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,8 @@ services:
             file: docker-common.yml
             service: nginx
         ports:
-            - 8000:8000
+            - 80:80
         volumes:
             - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-        volumes_from:
-            - api
+        links: 
+            - api:rest
